--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
 spotipy
 musicbrainzngs
-beautifulsoup4
+pandas
 requests
-pandas>=1.1.0
-numpy>=1.19.0
-scikit-learn>=0.23.0
-tensorflow>=2.4.0
-jupyter
-pytest
-lightfm
+python-dotenv
+scikit-learn
+annoy
+argparse
 
