--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 LASTFM_API_KEY=373312500b7055f9fbee15797209cc86
 SPOTIPY_CLIENT_ID=b19a0e8785ca4ca9b008e74c4cba5ae5
 SPOTIPY_CLIENT_SECRET=1e739c52ff78410398787f7e0f91313e
+MUSICBRAINZ_CLIENT_ID=dWFGUHztuVY0VOJe7JgOS1Q2a0yPuBMu
+MUSICBRAINZ_CLIENT_SECRET=VbCCbdp9zQ_RwIjQCbIibXuG547qhvoE
 
